@@ -1,6 +1,7 @@
 2001-07-26  Bradford Hovinen  <hovinen@ximian.com>
 
 	* applier.c (get_geometry): Tweak geometry settings
+	(renderer_render_wallpaper): Rendering geometry fixes
 
 	* background-properties-capplet.c (property_change_cb): Accept
 	applier as argument; retrieve property bag from applier
